Gtk-3.18: [GtkWindow] Switch from scalable spacing to fixed
This might help some SSDs on HiDPi settings (untested yet).

--- a/gtk-3.18/_common.scss
+++ b/gtk-3.18/_common.scss
@@ -1383,7 +1383,7 @@ GtkComboBox {
   }
 
   &.default-decoration {
-    padding: 0.4em;
+    padding: 5.3px;
     border-width: 0;
 
     .title { // fade_effect doesn't work
@@ -3391,7 +3391,7 @@ GtkVolumeButton.button {
       // revive top-edge highlight border
       box-shadow: inset 0 1px $highlight_color;
       // control titlebar height with button padding
-      .button.titlebutton { padding: 0.6em; }
+      .button.titlebutton { padding: 8px; }
     }
 
     .tiled .titlebar {
