--- a/gtk-3.18/gtk.css
+++ b/gtk-3.18/gtk.css
@@ -1796,7 +1796,7 @@ GtkComboBox {
     transition: none; }
   .titlebar.default-decoration,
   .header-bar.default-decoration {
-    padding: 0.4em;
+    padding: 5.3px;
     border-width: 0; }
     .titlebar.default-decoration .title,
     .header-bar.default-decoration .title {
@@ -5243,7 +5243,7 @@ GtkVolumeButton.button {
     .window-frame.ssd .titlebar {
       box-shadow: inset 0 1px rgba(255, 255, 255, 0.07); }
       .window-frame.ssd .titlebar .button.titlebutton {
-        padding: 0.6em; }
+        padding: 8px; }
     .window-frame.ssd .tiled .titlebar {
       transition: none; }
     .window-frame.ssd .maximized .titlebar {
